OPENEJB-1252 use file.toURI().toURL() instead of file.toURL(), upgrade xbean where this is fixed also
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb3@937937 13f79535-47bb-0310-9956-ffa450edef68